1. improved the API schemas. 2. solved a dependency issue in dockerfile
