# swagger_server/models/__init__.py
@@ -6,6 +6,7 @@ from __future__ import absolute_import
 from swagger_server.models.api_response import ApiResponse
 from swagger_server.models.connection import Connection
 from swagger_server.models.link import Link
+from swagger_server.models.location import Location
 from swagger_server.models.node import Node
 from swagger_server.models.port import Port
 from swagger_server.models.topology import Topology
