# swagger_server/swagger/swagger.yaml
@@ -14,7 +14,7 @@ externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
 servers:
-- url: https://virtserver.swaggerhub.com/YufengXin/SDX-LC/1.0.0
+- url: https://virtserver.swaggerhub.com/SDX-LC/1.0.0
   description: SwaggerHub API Auto Mocking
 - url: https://0.0.0.0:8080/v2
   description: Localhost
@@ -294,7 +294,7 @@ paths:
         "400":
           description: Invalid ID supplied
         "404":
-          description: Topology not found
+          description: Node not found
         "405":
           description: Validation exception
       security:
@@ -733,12 +733,11 @@ components:
           type: boolean
           default: false
       example:
-        start_time: 2000-01-23T04:56:07.000+00:00
+        start_time: 2000-01-23T04:56:07.000Z
         quantity: 0
         name: name
-        end_time: 2000-01-23T04:56:07.000+00:00
+        end_time: 2000-01-23T04:56:07.000Z
         id: id
-        egress_port: null
         ingress_port:
           node: urn:sdx:port:amlight.net:Novi06
           name: urn:sdx:port:amlight.net:Novi06:9
@@ -852,28 +851,28 @@ components:
             - label_range
             short_name: "9"
             id: id
-        time_stamp: 2000-01-23T04:56:07.000+00:00
+        time_stamp: 2000-01-23T04:56:07.000Z
         name: amLight
         links:
-        - total_bandwidth: 80083.738963282099575735628604888916015625
-          packet_loss: 59.62133916683182377482808078639209270477294921875
-          latency: 146582.15146899645333178341388702392578125
+        - total_bandwidth: 80083.7389632821
+          packet_loss: 59.621339166831824
+          latency: 146582.15146899645
           name: miami-Boca.amLight.sdx
-          available_bandwidth: 602746.015561421983875334262847900390625
+          available_bandwidth: 602746.015561422
           short_name: Miami-BocaRaton
           id: id
-          availability: 56.37376656633328053658260614611208438873291015625
+          availability: 56.37376656633328
           ports:
           - null
           - null
-        - total_bandwidth: 80083.738963282099575735628604888916015625
-          packet_loss: 59.62133916683182377482808078639209270477294921875
-          latency: 146582.15146899645333178341388702392578125
+        - total_bandwidth: 80083.7389632821
+          packet_loss: 59.621339166831824
+          latency: 146582.15146899645
           name: miami-Boca.amLight.sdx
-          available_bandwidth: 602746.015561421983875334262847900390625
+          available_bandwidth: 602746.015561422
           short_name: Miami-BocaRaton
           id: id
-          availability: 56.37376656633328053658260614611208438873291015625
+          availability: 56.37376656633328
           ports:
           - null
           - null
@@ -897,6 +896,8 @@ components:
         short_name:
           type: string
           example: Novi06
+        location:
+          $ref: '#/components/schemas/location'
         ports:
           type: array
           items:
@@ -962,14 +963,14 @@ components:
           minimum: 0
           type: number
       example:
-        total_bandwidth: 80083.738963282099575735628604888916015625
-        packet_loss: 59.62133916683182377482808078639209270477294921875
-        latency: 146582.15146899645333178341388702392578125
+        total_bandwidth: 80083.7389632821
+        packet_loss: 59.621339166831824
+        latency: 146582.15146899645
         name: miami-Boca.amLight.sdx
-        available_bandwidth: 602746.015561421983875334262847900390625
+        available_bandwidth: 602746.015561422
         short_name: Miami-BocaRaton
         id: id
-        availability: 56.37376656633328053658260614611208438873291015625
+        availability: 56.37376656633328
         ports:
         - null
         - null
@@ -978,12 +979,9 @@ components:
     port:
       required:
       - id
-      - label
-      - label_range
       - name
       - node
       - status
-      - type
       type: object
       properties:
         id:
@@ -997,18 +995,15 @@ components:
         node:
           type: string
           example: urn:sdx:port:amlight.net:Novi06
-        label_range:
-          type: array
-          items:
-            type: string
+        status:
+          type: string
+          example: up
       example:
         node: urn:sdx:port:amlight.net:Novi06
         name: urn:sdx:port:amlight.net:Novi06:9
-        label_range:
-        - label_range
-        - label_range
         short_name: "9"
         id: id
+        status: up
       xml:
         name: port
     ApiResponse:
@@ -1025,6 +1020,15 @@ components:
         code: 0
         type: type
         message: message
+    location:
+      type: object
+      properties:
+        address:
+          type: string
+        latitude:
+          type: number
+        longitude:
+          type: number
   requestBodies:
     topology:
       description: topology object that needs to be sent to the SDX LC
